--- a/html/index.html
+++ b/html/index.html
@@ -3,37 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Basic HTML</title>
+    <title>This is my first website</title>
 </head>
 <body>
-    <!-- Hypertext markup language -->
-    <!-- <p id="davis"> Davis</p>
-    <h1>Heading</h1>
-    <ul>
-        <li>Item One</li>
-    </ul> -->
-
-    <header>
-        <h1>Name, Logo, Website name</h1>
-    </header>
-    <nav>
-        <a href="./index.html">Home</a>
-    </nav>
-    <main>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid mollitia sequi facere maxime perspiciatis laboriosam nulla ab. Sapiente corrupti ipsa exercitationem hic in accusantium voluptate, porro incidunt sit, maiores rerum!
-        <section>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, recusandae.
-        </section>
-    </main>
-    <aside>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas quam culpa magnam facere perspiciatis non?
-    </aside>
-    <article>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Est facere nisi repudiandae illo voluptatum id nam tempore suscipit, totam voluptatibus doloribus, cumque esse fuga et.
-    </article>
-    <footer>
-        &copy; 2020
-    </footer>
+  <h1>candy</h1>
+  <h2>candy</h2>
+  <h3>candy</h3>
+  <h4>candy</h4>
+  <h5>candy</h5>
+  <h6>candy</h6>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, facilis?</p>
+  <a href="https://google.com"> open google</a>
 </body>
 <a href="https://bwake.netlify.app">my site</a>
-</html>Document
+</html>
